--- a/src/app/components/forms/forms.component.html
+++ b/src/app/components/forms/forms.component.html
@@ -38,29 +38,15 @@
               </mat-form-field>
 
               <mat-form-field class="form-content__input">
-                <mat-label>DNI/CI</mat-label>
-                <input matInput placeholder="DNI/CI" formControlName="dni" />
-                <mat-error *ngIf="form.hasError('required', 'dni')">
-                  El campo de CI es requerido
+                <input
+                  matInput
+                  placeholder="Apodo"
+                  formControlName="nickname" />
+                <mat-error *ngIf="form.hasError('required', 'nickname')">
+                  El campo Apodo es requerido
                 </mat-error>
               </mat-form-field>
 
-              <mat-form-field class="form-content__input">
-                <mat-label>Fecha de Nacimiento</mat-label>
-                <input
-                  matInput
-                  readonly
-                  [matDatepicker]="datepicker"
-                  formControlName="birthdate" />
-                <mat-datepicker-toggle
-                  matSuffix
-                  [for]="datepicker"></mat-datepicker-toggle>
-                <mat-datepicker #datepicker disabled="false"></mat-datepicker>
-                <mat-error> Este campo es requerido. </mat-error>
-              </mat-form-field>
-            </mat-card-content>
-
-            <mat-card-content class="form-content__column">
               <mat-form-field class="form-content__input">
                 <mat-label>Genero</mat-label>
                 <mat-select matNativeControl required formControlName="gender">
@@ -87,6 +73,30 @@
                     >{{ maritalOption }}
                   </mat-option>
                 </mat-select>
+              </mat-form-field>
+            </mat-card-content>
+
+            <mat-card-content class="form-content__column">
+              <mat-form-field class="form-content__input">
+                <mat-label>Fecha de Nacimiento</mat-label>
+                <input
+                  matInput
+                  readonly
+                  [matDatepicker]="datepicker"
+                  formControlName="birthdate" />
+                <mat-datepicker-toggle
+                  matSuffix
+                  [for]="datepicker"></mat-datepicker-toggle>
+                <mat-datepicker #datepicker disabled="false"></mat-datepicker>
+                <mat-error> Este campo es requerido. </mat-error>
+              </mat-form-field>
+
+              <mat-form-field class="form-content__input">
+                <mat-label>DNI/CI</mat-label>
+                <input matInput placeholder="DNI/CI" formControlName="dni" />
+                <mat-error *ngIf="form.hasError('required', 'dni')">
+                  El campo del DNI/CI es requerido
+                </mat-error>
               </mat-form-field>
 
               <mat-form-field class="form-content__input">
@@ -334,22 +344,304 @@
                   </mat-option>
                 </mat-select>
               </mat-form-field>
-
               <div>
                 <mat-card-actions align="end">
                   <button mat-raised-button matStepperPrevious>Atras</button
                   ><button
                     mat-raised-button
                     matStepperNext
-                    class="card__button"
-                    (click)="onSubmit()"
-                    [disabled]="finaltialInformationForm.invalid">
+                    class="card__button">
                     Siguiente
                   </button>
                 </mat-card-actions>
               </div>
             </mat-card-content>
           </form>
+        </mat-step>
+
+        <mat-step [stepControl]="childForm">
+          <ng-template matStepLabel>Hijos</ng-template>
+          <mat-card-content class="form-content__all">
+            <div class="form-content__input">
+              <mat-label> ¿Tiene hijos? </mat-label>
+              <br />
+              <mat-radio-group
+                required="Debe escoger una opcion"
+                class="modal-content__radio-and-checkbox"
+                [(ngModel)]="hasChild">
+                <mat-radio-button value="true" (change)="radioChange($event)">
+                  Si
+                </mat-radio-button>
+                <mat-radio-button value="false" (change)="radioChange($event)">
+                  No
+                </mat-radio-button>
+              </mat-radio-group>
+            </div>
+            <br />
+            <br />
+
+            <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
+              <mat-tree-node
+                *matTreeNodeDef="let node"
+                matTreeNodeToggle
+                matTreeNodePadding>
+                <button mat-icon-button disabled></button>
+                <button
+                  mat-icon-button
+                  matTreeNodeToggle
+                  [attr.aria-label]="'Toggle ' + node.data.name">
+                  <mat-icon class="mat-icon-rtl-mirror">
+                    {{
+                      treeControl.isExpanded(node)
+                        ? 'expand_more'
+                        : 'chevron_right'
+                    }}
+                  </mat-icon>
+                </button>
+                <mat-label>
+                  Hijo:
+
+                  {{ node.data.name }}, {{ node.data.birthdate }},
+                  {{ node.data.sex }}
+                </mat-label>
+
+                <button mat-button (click)="updateNode(node)">Update</button>
+                <button mat-button (click)="deleteNode(node)">Delete</button>
+              </mat-tree-node>
+
+              <mat-tree-node
+                *matTreeNodeDef="let node; when: hasNoContent"
+                matTreeNodePadding>
+                <button mat-icon-button disabled></button>
+                <form
+                  [formGroup]="childForm"
+                  *ngIf="isAddItem"
+                  (ngSubmit)="saveNode(node)">
+                  <mat-form-field class="form-content__input">
+                    <mat-label>Agregue datos de su hijo...</mat-label>
+                    <input
+                      matInput
+                      placeholder="Nombres"
+                      formControlName="name" />
+                    <mat-error *ngIf="childForm.hasError('required', 'name')">
+                      El campo Nombre es requerido
+                    </mat-error>
+                  </mat-form-field>
+
+                  <mat-form-field class="form-content__input">
+                    <mat-label>Fecha de Nacimiento</mat-label>
+                    <input
+                      matInput
+                      readonly
+                      [matDatepicker]="datepicker"
+                      formControlName="birthdate" />
+                    <mat-datepicker-toggle
+                      matSuffix
+                      [for]="datepicker"></mat-datepicker-toggle>
+                    <mat-datepicker
+                      #datepicker
+                      disabled="false"></mat-datepicker>
+                    <mat-error> Este campo es requerido. </mat-error>
+                  </mat-form-field>
+
+                  <mat-form-field class="form-content__input">
+                    <mat-label>Genero</mat-label>
+                    <mat-select
+                      matNativeControl
+                      required
+                      formControlName="gender">
+                      <mat-option
+                        *ngFor="let gender of genderOptions"
+                        [value]="gender"
+                        >{{ gender }}
+                      </mat-option>
+                    </mat-select>
+                    <mat-error *ngIf="childForm.hasError('required', 'gender')">
+                      Este campo es requerido.
+                    </mat-error>
+                  </mat-form-field>
+                  <button
+                    mat-button
+                    type="submit"
+                    [disabled]="childForm.invalid">
+                    Save
+                  </button>
+                </form>
+              </mat-tree-node>
+
+              <mat-tree-node
+                *matTreeNodeDef="let node; when: hasNodeChild"
+                matTreeNodePadding>
+                <button
+                  mat-icon-button
+                  matTreeNodeToggle
+                  [attr.aria-label]="'Toggle ' + node.data.name">
+                  <mat-icon class="mat-icon-rtl-mirror">
+                    {{
+                      treeControl.isExpanded(node)
+                        ? 'expand_more'
+                        : 'chevron_right'
+                    }}
+                  </mat-icon>
+                </button>
+                <mat-label> Hijos </mat-label>
+
+                <button
+                  mat-icon-button
+                  (click)="addNewItem(node)"
+                  [disabled]="isAddItem && childForm.invalid">
+                  <mat-icon>add</mat-icon>
+                </button>
+              </mat-tree-node>
+            </mat-tree>
+
+            <!-- <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
+                <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding>
+                  <div class="input-group">
+                    <div class="input-group-prepend">
+                      <button class="btn" type="button" disabled></button>
+                    </div> -->
+            <!-- <button
+                      type="button"
+                      (click)="makeActive(node)"
+                      [ngClass]="{
+                        btn: true,
+                        'parent-selected':
+                          categorySelectedByLevel.includes(node),
+                        'item-selected':
+                          idCategoryModelActive_ &&
+                          idCategoryModelActive_ === node.id,
+                        'item-unselected':
+                          !idCategoryModelActive_ ||
+                          idCategoryModelActive_ !== node.id
+                      }">
+                      {{ node.name }}
+                    </button> -->
+            <!-- <div class="input-group-append">
+                      <button
+                        class="btn"
+                        type="button"
+                        (click)="addNewItem(node)">
+                        <mat-icon icon="plus"></mat-icon>
+                      </button>
+                      <!-- <button
+                        class="btn"
+                        type="button"
+                        (click)="deleteItem(node)">
+                        <fa-icon icon="trash"></fa-icon>
+                      </button> -->
+            <!-- </div>
+                  </div>
+                </mat-tree-node>  -->
+
+            <!-- <mat-tree-node
+                  *matTreeNodeDef="let node"
+                  matTreeNodeToggle
+                  matTreeNodePadding>
+                  <button mat-icon-button></button>
+                  {{ node }}
+                </mat-tree-node> -->
+
+            <!-- <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding>
+                  <button mat-icon-button disabled></button>
+                  <form
+                    [formGroup]="childForm"
+                    class="form-content"
+                    (ngSubmit)="saveNode(node)">
+                    <mat-form-field class="form-content__input">
+                      <input
+                        matInput
+                        placeholder="Nombres"
+                        formControlName="firstName" />
+                      <mat-error
+                        *ngIf="childForm.hasError('pattern', 'firstName')">
+                        No se permiten números ni caracteres especiales en este
+                        campo.
+                      </mat-error>
+                      <mat-error
+                        *ngIf="childForm.hasError('required', 'firstName')">
+                        El campo Nombre es requerido
+                      </mat-error>
+                    </mat-form-field>
+
+                    <mat-form-field class="form-content__input">
+                      <mat-label>Fecha de Nacimiento</mat-label>
+                      <input
+                        matInput
+                        readonly
+                        [matDatepicker]="datepicker"
+                        formControlName="birthdate" />
+                      <mat-datepicker-toggle
+                        matSuffix
+                        [for]="datepicker"></mat-datepicker-toggle>
+                      <mat-datepicker
+                        #datepicker
+                        disabled="false"></mat-datepicker>
+                      <mat-error> Este campo es requerido. </mat-error>
+                    </mat-form-field>
+
+                    <mat-form-field class="form-content__input">
+                      <mat-label>Genero</mat-label>
+                      <mat-select
+                        matNativeControl
+                        required
+                        formControlName="gender">
+                        <mat-option
+                          *ngFor="let gender of genderOptions"
+                          [value]="gender"
+                          >{{ gender }}
+                        </mat-option>
+                      </mat-select>
+                      <mat-error *ngIf="form.hasError('required', 'gender')">
+                        Este campo es requerido.
+                      </mat-error>
+                    </mat-form-field>
+                  </form>
+                  <button mat-button (click)="saveNode(node)">Guardar</button>
+                </mat-tree-node> -->
+
+            <!-- <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding>
+                  <button
+                    mat-icon-button
+                    matTreeNodeToggle
+                    [attr.aria-label]="'Toggle ' + node.item">
+                    <mat-icon class="mat-icon-rtl-mirror">
+                      {{
+                        treeControl.isExpanded(node)
+                          ? 'expand_more'
+                          : 'chevron_right'
+                      }}
+                    </mat-icon>
+                  </button>
+                  <button mat-icon-button (click)="addNewItem(node)">
+                    <mat-icon>add</mat-icon>
+                  </button>
+                </mat-tree-node> -->
+            <!-- </mat-tree>
+
+              <div>
+                <button
+                  mat-raised-button
+                  color="primary"
+                  aria-label="Agregar item">
+                  <mat-icon>add</mat-icon>
+                  <mat-label> Agregar otro hijo </mat-label>
+                </button>
+              </div> -->
+
+            <div>
+              <mat-card-actions align="end">
+                <button mat-raised-button matStepperPrevious>Atras</button
+                ><button
+                  mat-raised-button
+                  matStepperNext
+                  class="card__button"
+                  (click)="onSubmit()">
+                  Guardar
+                </button>
+              </mat-card-actions>
+            </div>
+          </mat-card-content>
         </mat-step>
       </mat-horizontal-stepper>
     </mat-card>
