--- a/src/app/components/personal-information-form/personal-information-form.component.scss
+++ b/src/app/components/personal-information-form/personal-information-form.component.scss
@@ -30,9 +30,9 @@
 
 
   &__button {
-    margin-top: 75px;
-    padding: 4px;
-    width: 20%;
+    // margin-top: 75px;
+    // padding: 4px;
+    // width: 20%;
     background-color: $button;
     color: white;
   }
