--- a/src/app/components/menu/header/header.component.html
+++ b/src/app/components/menu/header/header.component.html
@@ -6,24 +6,19 @@
           menu
         </mat-icon>
       </button>
-      <h1>Recursos Humanos</h1>
-      <span class="menu-spacer"></span>
-      <!-- <div>
-        <a mat-button [routerLink]="'/accounts'"> Accounts </a>
-        <a mat-button [routerLink]="'/create-account'"> Create Account </a>
-        <a mat-button [routerLink]="'/contacts'"> Contacts </a>
-        <a mat-button [routerLink]="'/create-contact'"> Create Contact </a>
-        <a mat-button [routerLink]="'/activities'"> Activities </a>
-        <a mat-button [routerLink]="'/create-activity'"> Create Activity </a>
-      </div> -->
+      <h1 class="text__title">Recursos Humanos</h1>
+
       <span class="spacer"></span>
       <mat-menu #menu="matMenu">
         <button mat-menu-item (click)="goToProfile()">Profile</button>
         <button mat-menu-item (click)="logout()">Logout</button>
       </mat-menu>
 
-      <span *ngIf="user">{{ user.username }}</span>
-      <button mat-icon-button [matMenuTriggerFor]="menu">
+      <button
+        class="container__username"
+        mat-icon-button
+        [matMenuTriggerFor]="menu">
+        <span class="text__username" *ngIf="user">{{ user.username }}</span>
         <mat-icon class="icon__user-display">account_circle</mat-icon>
       </button>
     </mat-toolbar-row>
