--- a/src/app/components/menu/sidenav-content/sidenav-content.component.html
+++ b/src/app/components/menu/sidenav-content/sidenav-content.component.html
@@ -1,16 +1,29 @@
 <div class="container">
-  <button mat-button class="menu-button" routerLink="/">
-    <mat-icon>home</mat-icon>
-    <span>Inicio</span>
-  </button>
+  <div class="menu-container">
+    <button mat-button class="menu-button" routerLink="/">
+      <mat-icon>home</mat-icon>
+      <span>Inicio</span>
+    </button>
+  </div>
   <mat-divider></mat-divider>
-  <button mat-button class="menu-button" routerLink="/employees">
-    <mat-icon>group</mat-icon>
-    <span>Registro de empleados</span>
-  </button>
+  <div class="menu-container">
+    <button mat-button class="menu-button" routerLink="/employees">
+      <mat-icon>group</mat-icon>
+      <span>Registro de empleados</span>
+    </button>
+  </div>
   <mat-divider></mat-divider>
-  <button mat-button class="menu-button" routerLink="/employees">
-    <mat-icon>account_box</mat-icon>
-    <span>Mi cuenta</span>
-  </button>
+  <div class="menu-container">
+    <button mat-button class="menu-button" routerLink="/addresses">
+      <mat-icon>map</mat-icon>
+      <span>Registro de domicilios</span>
+    </button>
+  </div>
+  <mat-divider></mat-divider>
+  <div class="menu-container">
+    <button mat-button class="menu-button" routerLink="/employees">
+      <mat-icon>account_box</mat-icon>
+      <span>Mi cuenta</span>
+    </button>
+  </div>
 </div>
