--- a/src/app/components/menu/sidenav-content/sidenav-content.component.scss
+++ b/src/app/components/menu/sidenav-content/sidenav-content.component.scss
@@ -7,18 +7,27 @@ mat-sidenav-container {
 .container{
   padding-top: 10px;
 }
+
+.menu-container{
+  :hover{
+    color: $lblue-text-color;
+}  
+
+}
 .menu-button {
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  font-size: .8rem;
-
+  font-size: 0.9rem;
+  color: $dark-grey;
+  font-weight: 300;
 }
 
 mat-divider {
   // margin-top: 16px;
   // margin-bottom: 16px;
-  margin: 5px 12px;
+  margin: 5px 40px;
   background-color: $line-background-color;
 }
+
