--- a/src/app/components/employees/employees.component.html
+++ b/src/app/components/employees/employees.component.html
@@ -1,59 +1,119 @@
-<table mat-table [dataSource]="data" class="mat-elevation-z8 demo-table">
-  <!-- Position Column -->
-  <ng-container matColumnDef="firstName">
-    <th mat-header-cell *matHeaderCellDef>Nombre</th>
-    <td mat-cell *matCellDef="let element">{{ element.firstName }}</td>
-  </ng-container>
+<div class="container">
+  <div class="title-container">
+    <h1 class="title-container__title">Registro de empleados</h1>
+  </div>
+  <div class="mat-elevation-z8 align-table" *ngIf="employees && dataSource">
+    <table
+      mat-table
+      matSort
+      [dataSource]="dataSource"
+      (matSortChange)="announceSortChange($event)"
+      class="table">
+      <ng-container matColumnDef="firstName">
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+          mat-sort-header
+          class="table__column-title">
+          Nombre
+        </th>
+        <td mat-cell *matCellDef="let element">{{ element.firstName }}</td>
+      </ng-container>
 
-  <!-- Name Column -->
-  <ng-container matColumnDef="lastName">
-    <th mat-header-cell *matHeaderCellDef>Apellido</th>
-    <td mat-cell *matCellDef="let element">{{ element.lastName }}</td>
-  </ng-container>
+      <ng-container matColumnDef="lastName">
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+          mat-sort-header
+          class="table__column-title">
+          Apellido
+        </th>
+        <td mat-cell *matCellDef="let element">{{ element.lastName }}</td>
+      </ng-container>
 
-  <!-- Weight Column -->
-  <ng-container matColumnDef="birthdate">
-    <th mat-header-cell *matHeaderCellDef>Fecha de Nacimiento</th>
-    <td mat-cell *matCellDef="let element">{{ element.birthdate }}</td>
-  </ng-container>
+      <ng-container matColumnDef="birthdate">
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+          mat-sort-header
+          class="table__column-title">
+          Fecha de Nacimiento
+        </th>
+        <td mat-cell *matCellDef="let element">{{ element.birthdate }}</td>
+      </ng-container>
 
-  <!-- Symbol Column -->
-  <ng-container matColumnDef="category">
-    <th mat-header-cell *matHeaderCellDef>Categoria</th>
-    <td mat-cell *matCellDef="let element">{{ element.category }}</td>
-  </ng-container>
+      <ng-container matColumnDef="category">
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+          mat-sort-header
+          class="table__column-title">
+          Categora
+        </th>
+        <td mat-cell *matCellDef="let element">{{ element.category }}</td>
+      </ng-container>
 
-  <ng-container matColumnDef="email">
-    <th mat-header-cell *matHeaderCellDef>Email</th>
-    <td mat-cell *matCellDef="let element">{{ element.email }}</td>
-  </ng-container>
+      <ng-container matColumnDef="email">
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+          mat-sort-header
+          class="table__column-title">
+          Email
+        </th>
+        <td mat-cell *matCellDef="let element">{{ element.email }}</td>
+      </ng-container>
 
-  <ng-container matColumnDef="city">
-    <th mat-header-cell *matHeaderCellDef>Ciudad</th>
-    <td mat-cell *matCellDef="let element">{{ element.city }}</td>
-  </ng-container>
+      <ng-container matColumnDef="city">
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+          mat-sort-header
+          class="table__column-title">
+          Ciudad
+        </th>
+        <td mat-cell *matCellDef="let element">{{ element.city }}</td>
+      </ng-container>
 
-  <ng-container matColumnDef="status">
-    <th mat-header-cell *matHeaderCellDef>Status</th>
-    <td mat-cell *matCellDef="let element">{{ element.status }}</td>
-  </ng-container>
+      <ng-container matColumnDef="status">
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+          mat-sort-header
+          class="table__column-title">
+          Status
+        </th>
+        <td mat-cell *matCellDef="let element">{{ element.status }}</td>
+      </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr
-    mat-row
-    (click)="clickedRows.add(row)"
-    [class.demo-row-is-clicked]="clickedRows.has(row)"
-    *matRowDef="let row; columns: displayedColumns"></tr>
-</table>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr
+        mat-row
+        *matRowDef="let row; columns: displayedColumns"
+        matRipple></tr>
 
-<!-- <div>
+      <!-- <tr
+        mat-row
+        (click)="clickedRows.add(row)"
+        [class.demo-row-is-clicked]="clickedRows.has(row)"
+        *matRowDef="let row; columns: displayedColumns"></tr> -->
+    </table>
+    <mat-paginator
+      showFirstLastButtons
+      class="paginator-container"
+      [length]="dataSource.paginator?.length"
+      [pageSizeOptions]="[5, 10, 20, 30]">
+    </mat-paginator>
+    <!-- <div>
   <h3>Click Log</h3>
 </div> -->
 
-<!-- <div *ngIf="!clickedRows.size">Clicked rows will be logged here</div> -->
+    <!-- <div *ngIf="!clickedRows.size">Clicked rows will be logged here</div> -->
 
-<!-- <ul>
+    <!-- <ul>
   <li *ngFor="let clickedRow of clickedRows">
     Clicked on {{ clickedRow.firstName }}
   </li>
 </ul> -->
+  </div>
+</div>
