--- a/src/app/components/employees/employees.component.scss
+++ b/src/app/components/employees/employees.component.scss
@@ -1,95 +1,45 @@
 @import "../../../styles/colors";
 
-.main {
-  background-image: url('/assets/images/background-image.png');
-  background-size: 100% auto;
-  background-repeat: no-repeat;
-  background-position: bottom;
-  height: 100%;
+.table {
+  width: 100%;
 
-  &__container{
-    padding-top: 120px;
-    display: flex;
-    align-content: center;
-    justify-content: center; 
+  &__column-title{
+    font-size: 1.1em;
+    background-color: $light-blue;
+    color: $dark-grey-text-color;
+    text-align: center;
   }
 }
 
-.card {
-  background-color: white;
-  color: $dark-grey;
-  transition: box-shadow 280ms cubic-bezier(0.4, 0, 0.2, 1);
-  position: relative;
-  display: block;
-  border-radius: 15px;
-  box-shadow: 3px 3px 8px 0px $shadow;
-  border: 1px solid $border;
-  width: 1050px;
-  align-content: flex-start;
-  align-items: flex-start;
-
-
-  &__button {
-    margin-top: 75px;
-    padding: 4px;
-    width: 20%;
-    background-color: $button;
-    color: white;
-  }
-}
-
-.form-content{
-  margin-left: 40px;
-  width: 95%;
+.align-table {
   display: flex;
-
-  &__input{
-    width: 85%;
-    padding-left: 15px ;
-  }
-
-  &__column{
-    width: 50%;
-  }
-
-  &__all{
-    padding-left: 25%;    
-    width: 50%;
-  }
-
-  &__actions{
-    display: flex;
-    justify-content: right;
-    padding-right: 60px;
- }
-
-}
-
-mat-card-header {
-  width: 100%;
-  display: block;
-  font-weight: bold;
-  padding: 20px 0px;
+  flex-direction: column;
+  align-items: center;
 }
 
 
-mat-form-field{
-  width: 80%;
-  margin-top: 0.75em;
+.container{
+  margin: 30px;
+}
+.title-container {
+  position: relative;
+  width: 90%;
+
+  &__title {
+    font-weight: 450;
+    font-size: 18pt;
+    color: $dark-grey-text-color;
+    margin: 10px 0px;
+  }
 }
 
+.mat-row:hover {
+  background-color: rgba(0, 0, 0, 0.04);
+}
+.mat-row:hover .mat-ripple-element {
+background-color: rgba(0, 0, 0, 0.08);
+}
 
-.modal-content{
-  width: 100%;
-  
-  &__input{
-      width: 95%;
-  };
-  &__radio-and-checkbox{
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: space-around;
-  }
-
+.paginator-container{
+  border: 5px;
 }
