add-employee-progress

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -6,3 +6,16 @@ $backgroud: #e2e2e2;
 $button: #A787EA;
 $button-upload: #343FE6;
 $button-dark: #7534E6;
+$dark-purple-icon-color: #2f1262;
+$line-background-color: rgba(255, 255, 255, 0.5);
+$background-menu-color: white;
+$light-text-color: white;
+$dark-purple-text-color: #1a063c;
+$layout-content-color: #E9E9E9;
+$purple-text-color: #8177a5; //#D6CDF7; //#91bdef;
+$light-purple-text-color:#D6CDF7; //#91bdef;
+$lblue-text-color: #6ec1da;
+$dark-lblue-text-color: #107fa0;
+$light-blue-text-color: #C8E2EA;
+$dark-grey-text-color: #34313199;
+$light-blue: #ace7ef;
