--- a/src/app/components/employees/employees.component.html
+++ b/src/app/components/employees/employees.component.html
@@ -86,17 +86,33 @@
         <td mat-cell *matCellDef="let element">{{ element.status }}</td>
       </ng-container>
 
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef class="table__column-title">
+          Acciones
+        </th>
+        <td mat-cell *matCellDef="let element" class="text-center">
+          <button
+            class="btn-color-detail"
+            matTooltip="Detalles"
+            mat-raised-button
+            (click)="openDetail(element)">
+            <mat-icon> open_in_new </mat-icon>
+          </button>
+          <!-- <button
+            class="btn-color-edit"
+            matTooltip="Editar"
+            mat-raised-button
+            (click)="openEditModal(element)">
+            <mat-icon class="icon"> edit </mat-icon>
+          </button> -->
+        </td>
+      </ng-container>
+
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr
         mat-row
         *matRowDef="let row; columns: displayedColumns"
         matRipple></tr>
-
-      <!-- <tr
-        mat-row
-        (click)="clickedRows.add(row)"
-        [class.demo-row-is-clicked]="clickedRows.has(row)"
-        *matRowDef="let row; columns: displayedColumns"></tr> -->
     </table>
     <mat-paginator
       showFirstLastButtons
@@ -104,16 +120,5 @@
       [length]="dataSource.paginator?.length"
       [pageSizeOptions]="[5, 10, 20, 30]">
     </mat-paginator>
-    <!-- <div>
-  <h3>Click Log</h3>
-</div> -->
-
-    <!-- <div *ngIf="!clickedRows.size">Clicked rows will be logged here</div> -->
-
-    <!-- <ul>
-  <li *ngFor="let clickedRow of clickedRows">
-    Clicked on {{ clickedRow.firstName }}
-  </li>
-</ul> -->
   </div>
 </div>
