--- a/src/app/components/employees/employees.component.scss
+++ b/src/app/components/employees/employees.component.scss
@@ -97,7 +97,7 @@ background-color: rgba(0, 0, 0, 0.08);
   position: relative;
   width: 100%;
   margin-right: 10%;
-
+  margin-bottom: 20px;
   @media (max-width: 600px) {
       width: 80%;
       margin: 10px 0px;
@@ -109,13 +109,13 @@ background-color: rgba(0, 0, 0, 0.08);
       box-sizing: border-box;
       border-radius: 50px;
       border: 0;
-      font-size: 16px;
+      font-size: 14px;
       background-color: white;
-      background-position: 10px 10px;
+      // background-position: 10px 10px;
       background-repeat: no-repeat;
-      padding: 12px 10px 12px 35px;
-      transition: width 0.4s ease-in-out;
-
+      padding: 12px 20px 12px 35px;
+      // transition: width 0.4s ease-in-out;
+      
       &:focus {
         width: 80%;
         border-radius: 20px;
