--- a/src/app/components/menu/sidenav-content/sidenav-content.component.html
+++ b/src/app/components/menu/sidenav-content/sidenav-content.component.html
@@ -21,7 +21,14 @@
   </div>
   <mat-divider></mat-divider>
   <div class="menu-container">
-    <button mat-button class="menu-button" routerLink="/employees">
+    <button mat-button class="menu-button" routerLink="/reports">
+      <mat-icon>insert_chart_outlined</mat-icon>
+      <span>Reportes</span>
+    </button>
+  </div>
+  <mat-divider></mat-divider>
+  <div class="menu-container">
+    <button mat-button class="menu-button" routerLink="/my-profilee">
       <mat-icon>account_box</mat-icon>
       <span>Mi cuenta</span>
     </button>
