--- a/src/app/components/personal-information-form/personal-documentation-form/personal-documentation-form.component.scss
+++ b/src/app/components/personal-information-form/personal-documentation-form/personal-documentation-form.component.scss
@@ -6,106 +6,25 @@
   align-items: center;
 }
 
-.file-drop {
-  height: 320px;
-  width: 500px; 
-  margin: 0 auto;
-  background: #FAFAFBFF; 
-  border: 2px dashed #BCC1CAFF; 
-  border-radius: 6px; 
-  cursor: pointer;
-  display: flex; 
-  flex-direction: column;
+.card {
+  background-color: white;
+  color: $dark-grey;
+  transition: box-shadow 280ms cubic-bezier(0.4, 0, 0.2, 1);
   position: relative;
+  display: block;
+  border-radius: 15px;
+  box-shadow: 3px 3px 8px 0px $shadow;
+  border: 1px solid $border;
+  width: 1050px;
+  align-content: flex-start;
+  align-items: flex-start;
 
-  align-items: center; 
-  justify-content: center;
-  text-align: center;
 
-  input {
-    opacity: 0;
-    position: absolute;
-    z-index: 2;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-  }
-
-  
-  label {
+  &__button {
+    background-color: $button;
     color: white;
-    width: 100px;
-    height: 40px;
-    border-radius: 21.5px;
-    background-color: $lblue-text-color;
-    padding: 12px 16px;
-    margin-top: 5px;
-  }
-
-  h3 {
-    font-size: 20px;
-    font-weight: 400;
-    color: #38424c;
-  }
-
-  &__icon{ 
-    font-size: 45px;
-    width: 48px; 
-    height: 48px; 
-    color: $purple-text-color;
   }
 }
-
-.fileover {
-  animation: shake 1s;
-  animation-iteration-count: infinite;
-}
-
-.files-list {
-  margin-top: 1.5rem;
-
-  .single-file {
-    display: flex;
-    padding: 0.5rem;
-    justify-content: space-between;
-    align-items: center;
-    border: dashed 1px #979797;
-    margin-bottom: 1rem;
-
-    img.delete {
-      margin-left: 0.5rem;
-      cursor: pointer;
-      align-self: flex-end;
-    }
-
-
-    display: flex;
-    flex-grow: 1;
-
-    .name {
-      font-size: 14px;
-      font-weight: 500;
-      color: #353f4a;
-      margin: 0;
-    }
-
-    .size {
-      font-size: 12px;
-      font-weight: 500;
-      color: #a4a4a4;
-      margin: 0;
-      margin-bottom: 0.25rem;
-    }
-
-    .info {
-      width: 100%
-    }
-  }
-}
-
-
-///////////////////////
 
 .input {
   opacity: o;
@@ -125,12 +44,12 @@
 
 
 
-.file-drop-text {
-  margin: 5px;
-  font-size: 16px; 
-  color: #6E7787FF;
+// .file-drop-text {
+//   margin: 5px;
+//   font-size: 16px; 
+//   color: #6E7787FF;
 
-}
+// }
 .file-upload-button{
   margin-top: 5px;
 
